k8s/deploy/api-ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sampledata-ingress
  namespace: yas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /sampledata/$2
spec:
  ingressClassName: nginx
  rules:
  - host: storefront.yas.local.com
    http:
      paths:
      - path: /api/sampledata(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: sampledata
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  namespace: yas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /product/$2
spec:
  ingressClassName: nginx
  rules:
  - host: storefront.yas.local.com
    http:
      paths:
      - path: /api/product(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: product
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-ingress
  namespace: yas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /media/$2
spec:
  ingressClassName: nginx
  rules:
  - host: storefront.yas.local.com
    http:
      paths:
      - path: /api/media(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: media
            port:
              number: 80
